apyxl/src/snapshots/apyxl__feature__feature_validation_tests__namespace.snap
---
source: apyxl/src/feature.rs
expression: api
---
name: _
children:
  - Namespace:
      name: ns
      children: []
      attributes:
        chunk: ~
        entity_id:
          components: []
        comments: []
        user: []
      is_virtual: false
attributes:
  chunk: ~
  entity_id:
    components: []
  comments: []
  user: []
is_virtual: false
