apyxl/src/snapshots/apyxl__feature__feature_validation_tests__namespace_attribute_flag.snap
---
source: apyxl/src/feature.rs
description: "#[some_attr] namespace ns {}"
expression: api
---
name: _
children:
  - Namespace:
      name: ns
      children: []
      attributes:
        chunk: ~
        entity_id:
          components: []
        comments: []
        user:
          - name: some_attr
            data: []
      is_virtual: false
attributes:
  chunk: ~
  entity_id:
    components: []
  comments: []
  user: []
is_virtual: false
