apyxl/src/snapshots/apyxl__feature__feature_validation_tests__namespace_comment_line.snap
---
source: apyxl/src/feature.rs
description: "\n                /// comment\n                namespace ns {}\n                "
expression: api
---
name: _
children:
  - Namespace:
      name: ns
      children: []
      attributes:
        chunk: ~
        entity_id:
          components: []
        comments:
          - lines:
              - comment
        user: []
      is_virtual: false
attributes:
  chunk: ~
  entity_id:
    components: []
  comments: []
  user: []
is_virtual: false
