apyxl/src/snapshots/apyxl__feature__feature_validation_tests__nested_namespace.snap
---
source: apyxl/src/feature.rs
expression: api
---
name: _
children:
  - Namespace:
      name: outer
      children:
        - Namespace:
            name: inner
            children: []
            attributes:
              chunk: ~
              entity_id:
                components: []
              comments: []
              user: []
            is_virtual: false
      attributes:
        chunk: ~
        entity_id:
          components: []
        comments: []
        user: []
      is_virtual: false
attributes:
  chunk: ~
  entity_id:
    components: []
  comments: []
  user: []
is_virtual: false
